--- a/build.gradle
+++ b/build.gradle
@@ -15,7 +15,7 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-integration'
 	implementation 'org.springframework.kafka:spring-kafka'
-	implementation 'org.springframework.integration:spring-integration-kafka'
+	implementation 'org.springframework.integration:spring-integration-kafka:3.3.1.RELEASE'
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
 	}
