--- a/build.gradle
+++ b/build.gradle
@@ -8,11 +8,15 @@ group = 'com.ottogroup.demo'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '15'
 
+
 repositories {
 	mavenCentral()
 }
 
 dependencies {
+
+	annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
+
 	implementation 'org.springframework.boot:spring-boot-starter-integration'
 	implementation 'org.springframework.kafka:spring-kafka'
 	implementation 'org.springframework.integration:spring-integration-kafka:3.3.1.RELEASE'
