--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
+spring.kafka.bootstrap-servers=localhost:9092
+spring.kafka.consumer.group-id=democonsumer
 
+producteventconsumer.topic=demo.productevents
