--- a/build.gradle
+++ b/build.gradle
@@ -20,11 +20,15 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-integration'
 	implementation 'org.springframework.kafka:spring-kafka'
 	implementation 'org.springframework.integration:spring-integration-kafka:3.3.1.RELEASE'
+
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
 	}
 	testImplementation 'org.springframework.integration:spring-integration-test'
 	testImplementation 'org.springframework.kafka:spring-kafka-test'
+	testImplementation "org.testcontainers:testcontainers:1.14.3"
+	testImplementation "org.testcontainers:kafka:1.14.3"
+	testImplementation "org.testcontainers:junit-jupiter:1.14.3"
 }
 
 test {
